Updated Dockerfile to use the latest GIS extensions.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   dremio:
     restart: always
     image: dezota/dremio-oss-with-ext:20.1.0
-    build: ./build
+#    build: ./build
     hostname: dremio
     environment:
       - TZ="America/Denver"
